--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sys Datepicker demo</title>
+	<title>Infinite Scrolling Datepicker demo</title>
+	<link rel="stylesheet" href="css/sys.datepicker.css">
 	<style type="text/css">
 		html {
 			font-family: sans-serif;
@@ -10,132 +11,6 @@
 
 		input {
 			font-size: 1.2em;
-		}
-
-		.sys-datepicker {
-			background-color: #fff;
-			box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.1);
-			height: 300px;
-			position: relative;
-			border: 1px solid #000;
-			border-radius: 5px;
-			font-family: sans-serif;
-		}
-
-		.sys-datepicker-content {
-			width: 100%;
-			height: 100%;
-			overflow: hidden;
-		}
-
-		.sys-datepicker-body {
-			overflow: scroll;
-			-webkit-overflow-scrolling: touch;
-			position: relative;
-			height: 100%;
-			clear: left;
-			width: calc(100% + 15px);
-		}
-
-		.sys-datepicker-day,
-		.sys-datepicker-days-dow,
-		.sys-datepicker-placeholder {
-			float: left;
-			text-align: center;
-		}
-
-		.sys-datepicker-day,
-		.sys-datepicker-placeholder {
-			box-sizing: border-box;
-			cursor: pointer;
-			border-radius: 5px;
-			padding-top: 6px;
-			margin: 2.5px;
-			width: 30px;
-			height: 30px;
-		}
-
-		.sys-datepicker-days-dow {
-			width: 30px;
-			margin: 2.5px;
-		}
-
-		.sys-datepicker-day-weekend {
-			color: #ccc;
-		}
-
-		.sys-datepicker-days {
-			clear: left;
-			float: left;
-			font-size: .8rem;
-			padding-top: 5px;
-			padding-bottom: 5px;
-		}
-
-		.sys-datepicker-month {
-			width: 245px;
-			clear: left;
-			float: left;
-			padding: 0 2.5px;
-		}
-
-		.sys-datepicker-month-header {
-			padding: 5px 2.5px;
-		}
-
-		.sys-datepicker-year {
-			clear: left;
-			float: left;
-		}
-
-		.sys-datepicker-buttons {
-			box-sizing: border-box;
-			text-align: justify;
-			height: 25px;
-			padding: 2px 10px;
-			background: #ccc;
-		}
-
-		.sys-datepicker-buttons:after {
-			content: "";
-			width: 100%;
-			display: inline-block;
-		}
-
-		.sys-datepicker-button {
-			display: inline-block;
-			min-width: 20px;
-			height: 20px;
-			background: #ccc;
-			cursor: pointer;
-			border-radius: 5px;
-			font-size: .8rem;
-			line-height: 1.4;
-			text-align: center
-		}
-
-		.sys-datepicker-button + .sys-datepicker-button {
-			margin-left: 10px;
-		}
-
-		.sys-datepicker-button-today {
-			padding-left: 5px;
-			padding-right: 5px;
-		}
-
-		.sys-datepicker-day-selected {
-			background: #ccc;
-			color: #000;
-		}
-
-		.sys-datepicker-hover {
-			background: #000;
-			color: #fff;
-		}
-
-		.sys-datepicker-day-today {
-			background: #ccc;
-			color: #000;
 		}
 
 		#multiple-selected {
@@ -162,7 +37,7 @@
 	</style>
 </head>
 <body>
-	<h1>Systemantics infinite scrolling Datepicker demo</h1>
+	<h1>Infinite scrolling Datepicker demo</h1>
 	<h2>Default datepicker</h2>
 	<div>
 		Enter date: <input id="datepicker-default" type="text">
